cabal-version:      3.0
name:               deep-map
version:            0.2.1
category:           Data, Statistics
synopsis:           Deeply-nested, multiple key type maps.
description:
  Please see the README at https://github.com/mixphix/deep-map

homepage:           https://github.com/mixphix/deep-map
bug-reports:        https://github.com/mixphix/deep-map/issues
license:            BSD-3-Clause
copyright:          2021-2024 Melanie Brown
author:             Melanie Brown
maintainer:         brown.m@pm.me
extra-source-files:
  CHANGELOG.md
  README.md
tested-with:
  GHC ==9.10.1
   || ==9.8.2
   || ==9.6.6
   || ==9.4.8
   || ==9.2.8
   || ==9.0.2
   || ==8.10.7
   || ==8.8.4
   || ==8.6.5
   || ==8.4.4

common extensions
  default-extensions:
    BlockArguments
    DataKinds
    DefaultSignatures
    DerivingStrategies
    FunctionalDependencies
    LambdaCase
    MultiWayIf
    OverloadedRecordDot
    OverloadedStrings
    PatternSynonyms
    QuasiQuotes
    RecordWildCards
    TypeFamilies
    ViewPatterns

  ghc-options:        -O2 -Wall
  default-language:   GHC2021

library
  import:          extensions
  hs-source-dirs:  src
  build-depends:
    , base                 >=4.11   && <5
    , containers           >=0.6    && <0.8
    , indexed-traversable  ^>=0.1.2

  exposed-modules: Data.Map.Deep
